[gd_scene load_steps=17 format=3 uid="uid://bqocvcchoyr7"]

[ext_resource type="FontFile" path="res://Assets2D/Fonts/UI.tres" id="1"]
[ext_resource type="Script" path="res://MGF Scene/Formation/FormationSlots.gd" id="2"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UINormal.tres" id="3"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIP.tres" id="4"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIN.tres" id="5"]
[ext_resource type="Texture2D" uid="uid://b5i8y6x1kqdfn" path="res://Assets2D/PlayerIcon/Low/00026-1267103833.png" id="6"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUICN.tres" id="8"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUICP.tres" id="9"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UIStats.tres" id="10"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGO.tres" id="11"]
[ext_resource type="Texture2D" uid="uid://drtj8ibugo33u" path="res://Assets2D/UI/IconCardFoul.png" id="12"]
[ext_resource type="Script" path="res://MGF Scene/Main Game/ProgressStamina.gd" id="13"]
[ext_resource type="Texture2D" uid="uid://c4wjvoptafy8v" path="res://Assets2D/UI/IconLock.png" id="14"]
[ext_resource type="Gradient" path="res://Assets2D/Theme/GradientPowerBar.tres" id="15"]
[ext_resource type="FontFile" uid="uid://digsjq1ccbknq" path="res://Assets2D/Fonts/FiraSansFont/FiraSans-Medium.otf" id="16"]

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("16")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="FormationSlots" type="Button"]
custom_minimum_size = Vector2(150, 150)
anchors_preset = -1
anchor_right = 0.0837054
anchor_bottom = 0.181159
theme_override_styles/normal = ExtResource("5")
theme_override_styles/hover = ExtResource("4")
theme_override_styles/pressed = ExtResource("4")
theme_override_styles/disabled = ExtResource("5")
theme_override_styles/focus = ExtResource("4")
script = ExtResource("2")
opacityPreview = 0.5
color = Color(0.25, 0.25, 0.25, 1)

[node name="color" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2
theme_override_styles/normal = ExtResource("5")
theme_override_styles/hover = ExtResource("4")
theme_override_styles/pressed = ExtResource("4")
theme_override_styles/disabled = ExtResource("5")
theme_override_styles/focus = ExtResource("4")

[node name="background" type="TextureRect" parent="."]
modulate = Color(0.345098, 0.345098, 0.345098, 0.235294)
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 6

[node name="image" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -22.0
offset_bottom = -22.0
mouse_filter = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="lock" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 0, 0, 0.392157)
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -38.0001
offset_bottom = -38.0
mouse_filter = 2
texture = ExtResource("14")
expand_mode = 1
stretch_mode = 6

[node name="name" type="Label" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("10")
horizontal_alignment = 1
vertical_alignment = 1

[node name="id" type="Label" parent="."]
visible = false
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_right = 54.0
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ov" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_right = 54.0
offset_bottom = 36.0
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("3")
vertical_alignment = 1

[node name="f" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 20.0
offset_right = 54.0
offset_bottom = 56.0
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("3")
vertical_alignment = 1

[node name="m" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 54.0
offset_bottom = 76.0
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("3")
vertical_alignment = 1

[node name="d" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 60.0
offset_right = 54.0
offset_bottom = 96.0
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("3")
vertical_alignment = 1

[node name="check" type="Label" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -18.0
offset_right = 27.0
offset_bottom = 18.0
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="pos" type="Label" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -54.0001
offset_right = -6.00008
offset_bottom = 36.0
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="sta" type="ProgressBar" parent="."]
visible = false
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -35.0001
offset_top = 37.0
offset_right = 37.0
offset_bottom = 61.0
rotation = -1.5708
mouse_filter = 2
theme_override_fonts/font = SubResource("3")
max_value = 99.0
step = 0.1
value = 50.0
script = ExtResource("13")
gradient = ExtResource("15")

[node name="foul" type="Button" parent="."]
visible = false
modulate = Color(1, 0.772549, 0, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -18.0
offset_right = 19.0
offset_bottom = 18.0
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3")
theme_override_styles/normal = ExtResource("11")
theme_override_styles/hover = ExtResource("11")
theme_override_styles/pressed = ExtResource("11")
theme_override_styles/disabled = ExtResource("11")
theme_override_styles/focus = ExtResource("11")
text = "0"
icon = ExtResource("12")
icon_alignment = 1
expand_icon = true

[node name="preview" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 6

[node name="touch" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="Options" type="Control" parent="."]
visible = false
anchors_preset = 0
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ButtonAdd" type="Button" parent="Options"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("1")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("9")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("9")
text = "+"
icon_alignment = 1

[node name="ButtonRm" type="Button" parent="Options"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 50.0
theme_override_fonts/font = ExtResource("1")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("9")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("9")
text = "-"
icon_alignment = 1

[connection signal="value_changed" from="sta" to="sta" method="_on_ProgressStamina_value_changed"]
[connection signal="pressed" from="touch" to="." method="_on_touch_pressed"]
[connection signal="pressed" from="Options/ButtonAdd" to="." method="_on_ButtonAdd_pressed"]
[connection signal="pressed" from="Options/ButtonRm" to="." method="_on_ButtonDel_pressed"]
